--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ colorama==0.3.9
 coverage==4.4.1
 dj-database-url==0.4.2
 Django==3.1.4
+django-ckeditor==5.9.0
 django-crispy-forms==1.9.0
 django-environ==0.4.4
+django-js-asset==1.2.2
 django-tables2==2.3.1
 gunicorn==19.7.1
 idna==2.6
@@ -16,6 +18,7 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.18.3
 pandas==1.0.3
+Pillow==7.0.0
 psycopg2==2.8.5
 pylint==1.7.2
 pypng==0.0.20
